Windows 10 taskbar auto hide sometimes misdetects maximized windows as fullscreen
Categories
(Core :: Widget: Win32, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox138 | --- | fixed |
People
(Reporter: rkraesig, Assigned: rkraesig)
References
Details
Attachments
(1 file)
As discussed in bug 1949079, our maximized windows look a lot like fullscreen windows, from Windows' perspective; and so Windows sometimes completely hides the taskbar if one's on top. (For STR see, in particular, bug 1949079 comment 15.)
Fortunately, this should be resolvable: the old "NonRudeHWND" property appears to function correctly on modern Win10! Perhaps it was recently fixed on Windows' side; alternatively, perhaps the person who made the determination that it was problematic [0] erred in so doing.
Without a three-year-old copy of Win10 it's difficult to say. Still, it should be easy enough to switch to using "NonRudeHWND" in a pref-guarded way so that it can be quickly reverted for anyone for whom it (still?) breaks — and then that scaffolding easily removed, should it turn out to break for no one.
[0] i.e., me
| Assignee | ||
Comment 1•1 year ago
|
||
As noted in bug 1949079, Windows appears to detect maximized windows
with custom titlebars as "full screen", and hides the taskbar behind
them when autohide is enabled. (This appears to have been due to a
recent change to their explicitly undocumented heuristics, but we may
also have triggered it somehow with the recent-ish refactor of the
custom non-client area.)
To avert this, resurrect another mechanism to mark windows as
fullscreen: "NonRudeHWND". This was previously believed -- perhaps
correctly, at the time -- to be unusable on Windows 10; but recent
testing shows that it does work, even in several of the cases where
the existing mechanism fails.
Just in case it doesn't and I was right the first time, guard this
behind a pref and allow users to switch back to the flaky mechanism.
Updated•1 year ago
|
| Assignee | ||
Comment 2•1 year ago
|
||
For posterity's sake: as an upper bound, the NonRudeHWND mechanism is known to work as desired in Win10 19045.5371 and Win11 22631.4460.
Comment 4•1 year ago
|
||
| bugherder | ||
Description
•