Bug 1950441 - mark windows as (not) fullscreen via different mechanism  r=win-reviewers,handyman

As noted in bug 1949079, Windows appears to detect maximized windows
with custom titlebars as "full screen", and hides the taskbar behind
them when autohide is enabled. (This appears to have been due to a
recent change to their explicitly undocumented heuristics, but we may
also have triggered it somehow with the recent-ish refactor of the
custom non-client area.)

To avert this, resurrect another mechanism to mark windows as
fullscreen: "NonRudeHWND". This was previously believed -- perhaps
correctly, at the time -- to be unusable on Windows 10; but recent
testing shows that it _does_ work, even in several of the cases where
the existing mechanism fails.

Just in case it doesn't and I was right the first time, guard this
behind a pref and allow users to switch back to the flaky mechanism.

Differential Revision: https://phabricator.services.mozilla.com/D239658